--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
   "homepage": "https://github.com/huggingface/transformers.js#readme",
   "dependencies": {
     "@huggingface/jinja": "^0.3.0",
-    "onnxruntime-node": "1.19.2",
+    "onnxruntime-common": "^1.20.1",
+    "onnxruntime-node": "^1.20.1",
     "onnxruntime-web": "1.21.0-dev.20241024-d9ca84ef96",
     "sharp": "^0.33.5"
   },
@@ -74,6 +75,7 @@
     "jest-environment-node": "^30.0.0-alpha.6",
     "jsdoc-to-markdown": "^8.0.1",
     "prettier": "3.3.3",
+    "terser-webpack-plugin": "^5.3.10",
     "typescript": "^5.2.2",
     "wavefile": "^11.0.0",
     "webpack": "^5.80.0",
