--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@huggingface/jinja": "^0.4.1",
     "onnxruntime-node": "1.21.0",
     "onnxruntime-web": "1.22.0-dev.20250409-89f8206ba4",
+    "onnxruntime-common": "1.22.0-dev.20250409-89f8206ba4",
     "sharp": "^0.34.1"
   },
   "devDependencies": {
