--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "format:check": "prettier --check .",
     "typegen": "tsc --build",
     "dev": "webpack serve --no-client-overlay",
-    "ready": "webpack && npm run typegen",
+    "build": "webpack && npm run typegen",
+    "ready": "webpack && pnpm typegen",
     "test": "node --experimental-vm-modules --expose-gc node_modules/jest/bin/jest.js --verbose",
     "readme": "python ./docs/scripts/build_readme.py",
     "docs-api": "node ./docs/scripts/generate.js",
@@ -55,28 +56,28 @@
   },
   "homepage": "https://github.com/huggingface/transformers.js#readme",
   "dependencies": {
-    "@huggingface/jinja": "^0.5.1",
-    "onnxruntime-node": "1.22.0-rev",
-    "onnxruntime-web": "1.22.0",
-    "onnxruntime-common": "1.22.0",
-    "sharp": "^0.34.1"
+    "@huggingface/jinja": "0.5.3",
+    "onnxruntime-common": "1.23.2",
+    "onnxruntime-node": "1.23.2",
+    "onnxruntime-web": "1.23.2",
+    "sharp": "0.34.5"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.1",
-    "@webgpu/types": "^0.1.51",
+    "@types/jest": "29.5.14",
+    "@types/node": "22.19.1",
+    "@webgpu/types": "0.1.66",
     "catharsis": "github:xenova/catharsis",
-    "fastest-levenshtein": "^1.0.16",
-    "jest": "^30.0.0-alpha.6",
-    "jest-environment-node": "^30.0.0-alpha.6",
-    "jsdoc-to-markdown": "^9.1.1",
+    "fastest-levenshtein": "1.0.16",
+    "jest": "30.2.0",
+    "jest-environment-node": "30.2.0",
+    "jsdoc-to-markdown": "9.1.3",
     "prettier": "3.4.2",
-    "terser-webpack-plugin": "^5.3.14",
-    "typescript": "^5.8.2",
+    "terser-webpack-plugin": "5.3.14",
+    "typescript": "5.9.3",
     "wavefile": "11.0.0",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "webpack": "5.103.0",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "5.2.2"
   },
   "files": [
     "src",
